# agent-main

./: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  run.sh
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  agent.py  ingestion.py  llm_factory.py  memory.py  vector_store.py
app/utils/: __init__.py  chunking.py
scripts/: curl_tests.sh
tests/: EXPECTED_OUTPUTS.md  MANUAL_QA_CHECKLIST.md  README.md  __init__.py  conftest.py  mock_config_example.env.example  test_azure.py  test_clear.py  test_edge_cases.py  test_general.py  test_health.py  test_hybrid.py  test_memory.py  test_performance.py  test_retrieval.py  test_upload.py
tests/sample_docs/: README.md  hybrid_test.txt  retrieval_test.txt
